--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="GMT_Logos Teleperformance_RGB_July 2023_purple gradient.png" alt="Teleperformance Logo">
+            <img src="teleperformance-logo.png" alt="Teleperformance Logo">
         </div>
        
         <nav>
@@ -45,10 +45,10 @@
                     </li>
                     <li><a href="#" class="stay">Stay Connected</a>
                         <ul class="dropdown">
-                            <li><a href="https://www.instagram.com/teleperformance_malaysia/"><img src="igpinnk-removebg-preview.png" alt="Instagram Logo" class="logo-icon"> TPMY Instagram</a></li>
-                            <li><a href="https://www.instagram.com/teleperformance_thailand/"><img src="igpinnk-removebg-preview.png" alt="Instagram Logo" class="logo-icon"> TPTH Instagram</a></li>
-                            <li><a href="https://www.facebook.com/teleperformance.malaysia/"><img src="fbpiink-removebg-preview.png" alt="Facebook Logo" class="logo-icon"> TPMY Facebook</a></li>
-                            <li><a href="https://www.facebook.com/p/Teleperformance-Thailand-100076709572409/"><img src="fbpiink-removebg-preview.png" alt="Facebook Logo" class="logo-icon"> TPTH Facebook</a></li>
+                            <li><a href="https://www.instagram.com/teleperformance_malaysia/"><img src="instagram-icon.png" alt="Instagram Logo" class="logo-icon"> TPMY Instagram</a></li>
+                            <li><a href="https://www.instagram.com/teleperformance_thailand/"><img src="instagram-icon.png" alt="Instagram Logo" class="logo-icon"> TPTH Instagram</a></li>
+                            <li><a href="https://www.facebook.com/teleperformance.malaysia/"><img src="facebook-icon.png" alt="Facebook Logo" class="logo-icon"> TPMY Facebook</a></li>
+                            <li><a href="https://www.facebook.com/p/Teleperformance-Thailand-100076709572409/"><img src="facebook-icon.png" alt="Facebook Logo" class="logo-icon"> TPTH Facebook</a></li>
                         </ul>
                     </li>
                     <li><a href="https://www.teleperformance.com/en-us/contact-us/" class="contact-us">Contact Us</a></li>
@@ -75,7 +75,7 @@
             </div>
             <div class="intro-video">
                 <video width="100%" controls autoplay controls loop>
-                    <source src="Teleperformance_ Where Dreams Come True in the APAC Region _ TP Malaysia (2).mp4" type="video/mp4">
+                    <source src="teleperformance-video.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -97,14 +97,14 @@
                             <option value="" disabled selected>Choose your language</option>
                         </select>
                     </label>
-                    <hr style="border: 1px solid #ffffff; margin: 5px 0;">
+                    <hr>
                     <label class="loclabel" for="location-select">
                         Choose Your Location
                         <select id="location-select" class="footer-select">
                             <option value="" disabled selected>Choose your location</option>
                         </select>
                     </label>
-                    <hr style="border: 1px solid #ffffff; margin: 5px 0;">
+                    <hr>
                     <label class="jobt" for="job-type-select">
                         Choose Your Job Type
                         <select id="job-type-select" class="footer-select">
