--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <nav class="navbar navbar-expand-lg navbar-light py-3">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="GMT_Logos_Teleperformance_RGB_July_2023_purple_gradient.png" alt="Teleperformance Logo" height="40">
-                </a>
+                    <img src="teleperformance-logo1.png" alt="Teleperformance Logo" height="40">
+                </a>  
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
