--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="hero-video">
-                        <video width="100%" controls autoplay loop muted playsinline poster="video-poster.jpg">
-                            <source src="Teleperformance_Where_Dreams_Come_True_in_the_APAC_Region.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
+                         <video width="100%" controls autoplay controls loop>
+                            <source src="Teleperformance_ Where Dreams Come True in the APAC Region _ TP Malaysia (2).mp4" type="video/mp4">
+                                Your browser does not support the video tag.
                         </video>
                     </div>
                 </div>
