--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link href="styles.css" rel="stylesheet">
     <!-- QRious Library -->
     <script src="https://cdn.jsdelivr.net/npm/qrious@latest/dist/qrious.min.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; connect-src 'self' http://localhost:8080">
 </head>
 
 <body>
