--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <link href="styles.css" rel="stylesheet">
     <!-- QRious Library -->
     <script src="https://cdn.jsdelivr.net/npm/qrious@latest/dist/qrious.min.js"></script>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; connect-src 'self' http://localhost:8080">
 </head>
 
 <body>
@@ -31,7 +30,7 @@
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="TPLogo11.png.png" alt="Teleperformance Logo" height="40">
-                </a>  
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -78,7 +77,7 @@
                                 <li><a class="dropdown-item" href="#" data-lang="en">English</a></li>
                                 <li><a class="dropdown-item" href="#" data-lang="zh">Mandarin</a></li>
                                 <li><a class="dropdown-item" href="#" data-lang="jp">Japanese</a></li>
-                                <li><a class="dropdown-item" href="#" data-lang="th">Thai</a></li>
+                                <li><a class="dropdown-item" href="#" data-lang="TH">Thai</a></li>
                                 <li><a class="dropdown-item" href="#" data-lang="my">Malay</a></li>
                                 <li><a class="dropdown-item" href="#" data-lang="kr">Korean</a></li>
                             </ul>
@@ -98,9 +97,9 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="hero-video">
-                         <video width="100%" controls autoplay controls loop>
+                        <video width="100%" controls autoplay loop muted playsinline>
                             <source src="Teleperformance_ Where Dreams Come True in the APAC Region _ TP Malaysia (2).mp4" type="video/mp4">
-                                Your browser does not support the video tag.
+                            Your browser does not support the video tag.
                         </video>
                     </div>
                 </div>
