--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <li><a class="dropdown-item" href="#" data-lang="en">English</a></li>
                                 <li><a class="dropdown-item" href="#" data-lang="zh">Mandarin</a></li>
                                 <li><a class="dropdown-item" href="#" data-lang="jp">Japanese</a></li>
-                                <li><a class="dropdown-item" href="#" data-lang="TH">Thai</a></li>
+                                <li><a class="dropdown-item" href="#" data-lang="th">Thai</a></li>
                                 <li><a class="dropdown-item" href="#" data-lang="my">Malay</a></li>
                                 <li><a class="dropdown-item" href="#" data-lang="kr">Korean</a></li>
                             </ul>
