--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </nav>
     </header>
 
-    <!-- Hero Section -->
+    <!-- Hero Section 
     <section class="hero-section">
         <div class="container">
             <div class="row align-items-center">
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>  -->
 
     <!-- Job Section -->
     <section class="job-section">
