--- a/oppor.html
+++ b/oppor.html
@@ -46,16 +46,19 @@
                     <ul class="dropdown">
                         <li><a href="#" id="hot-job">Hot Job 🔥</a></li>
                         <li><a href="oppor.html">Job Opportunities 🌟</a></li>
-                        <li><a href="https://teleperformancemy.github.io/RAF_multilingual/">Refer A Friend</a></li>
+                        <li><a href="https://teleperformancemy.github.io/exRAF/">Refer A Friend</a></li>
                     </ul>
                 </li>
                 <li><a href="#" class="stay">Stay Connected</a>
-                    <ul class="dropdown">
-                        <li><a href="https://www.instagram.com/teleperformance_malaysia/"><img src="igpinnk-removebg-preview.png" alt="Instagram Logo" class="logo-icon"> TPMY Instagram</a></li>
-                        <li><a href="https://www.instagram.com/teleperformance_thailand/"><img src="igpinnk-removebg-preview.png" alt="Instagram Logo" class="logo-icon"> TPTH Instagram</a></li>
-                        <li><a href="https://www.facebook.com/teleperformance.malaysia/"><img src="fbpiink-removebg-preview.png" alt="Facebook Logo" class="logo-icon"> TPMY Facebook</a></li>
-                        <li><a href="https://www.facebook.com/p/Teleperformance-Thailand-100076709572409/"><img src="fbpiink-removebg-preview.png" alt="Facebook Logo" class="logo-icon"> TPTH Facebook</a></li>
-                    </ul>
+                            <ul class="dropdown-menu" aria-labelledby="connectDropdown">
+                                <li><a class="dropdown-item" href="https://www.linkedin.com/company/teleperformance/"><i class="fab fa-linkedin me-2"></i> TP LinkedIn</a></li>
+                                <li><a class="dropdown-item" href="https://www.youtube.com/@TeleperformanceGroup/"><i class="fab fa-youtube me-2"></i> TP YouYube</a></li>
+                                <li><a class="dropdown-item" href="https://www.tiktok.com/@teleperformance/"><i class="fab fa-tiktok me-2"></i> TP TIKTOK</a></li>
+                                <li><a class="dropdown-item" href="https://www.instagram.com/tp_malaysia/"><i class="fab fa-instagram me-2"></i> TPMY Instagram</a></li>
+                                <li><a class="dropdown-item" href="https://www.facebook.com/TPinMalaysia/"><i class="fab fa-facebook-f me-2"></i> TPMY Facebook</a></li>
+                                <li><a class="dropdown-item" href="https://www.instagram.com/tpinthailand/"><i class="fab fa-instagram me-2"></i> TPTH Instagram</a></li>
+                                <li><a class="dropdown-item" href="https://www.facebook.com/p/TPinThailand/"><i class="fab fa-facebook-f me-2"></i> TPTH Facebook</a></li>
+                            </ul>
                 </li>
                 <li><a href="https://www.teleperformance.com/en-us/contact-us/" class="contact-us">Contact Us</a></li>
                 <li class="language-dropdown">
