--- a/oppor.html
+++ b/oppor.html
@@ -49,7 +49,7 @@
                         <li><a href="https://teleperformancemy.github.io/exRAF/">Refer A Friend</a></li>
                     </ul>
                 </li>
-                <li><a href="#" class="stay">Stay Connected</a>
+                <li><a href="#" class="stay">Stay Connected
                             <ul class="dropdown-menu" aria-labelledby="connectDropdown">
                                 <li><a class="dropdown-item" href="https://www.linkedin.com/company/teleperformance/"><i class="fab fa-linkedin me-2"></i> TP LinkedIn</a></li>
                                 <li><a class="dropdown-item" href="https://www.youtube.com/@TeleperformanceGroup/"><i class="fab fa-youtube me-2"></i> TP YouYube</a></li>
@@ -58,7 +58,7 @@
                                 <li><a class="dropdown-item" href="https://www.facebook.com/TPinMalaysia/"><i class="fab fa-facebook-f me-2"></i> TPMY Facebook</a></li>
                                 <li><a class="dropdown-item" href="https://www.instagram.com/tpinthailand/"><i class="fab fa-instagram me-2"></i> TPTH Instagram</a></li>
                                 <li><a class="dropdown-item" href="https://www.facebook.com/p/TPinThailand/"><i class="fab fa-facebook-f me-2"></i> TPTH Facebook</a></li>
-                            </ul>
+                            </ul></a>
                 </li>
                 <li><a href="https://www.teleperformance.com/en-us/contact-us/" class="contact-us">Contact Us</a></li>
                 <li class="language-dropdown">
