--- a/oppor.html
+++ b/oppor.html
@@ -24,7 +24,7 @@
         
         <div class="logo">
 
-            <img src="GMT_Logos Teleperformance_RGB_July 2023_purple gradient.png" alt="Teleperformance Logo">
+            <img src="TPLog011.png.png" alt="Teleperformance Logo">
 
         </div>
 
