--- a/oppor.html
+++ b/oppor.html
@@ -113,7 +113,7 @@
     </main>
     
     <footer>
-        <p class="footer-left">© 2024 Teleperformance. All rights reserved.</p>
+        <p class="footer-left">© 2025 TP. All rights reserved.</p>
         <p class="footer-right">#ElevateAsia #MoreTogether</p>
         
     </footer>
