--- a/oppor.html
+++ b/oppor.html
@@ -112,11 +112,11 @@
         </section>
     </main>
     
-    <footer>
+ <!--   <footer>
         <p class="footer-left">© 2025 TP. All rights reserved.</p>
         <p class="footer-right">#ElevateAsia #MoreTogether</p>
         
-    </footer>
+    </footer>-->
     <div id="qr-modal" class="modal" style="display: none;">
         <div class="modal-content">
             <span class="close">&times;</span>
