--- a/oppor.html
+++ b/oppor.html
@@ -52,8 +52,8 @@
                 <li><a href="#" class="stay">Stay Connected</a>
                             <ul class="dropdown">
                                 <li><a class="dropdown-item" href="https://www.linkedin.com/company/teleperformance/"><i class="fab fa-linkedin me-2"></i> TP LinkedIn</a></li>
-                                <li><a class="dropdown-item" href="https://www.youtube.com/@TeleperformanceGroup/"><i class="fab fa-youtube me-2"></i> TP YouYube</a></li>
-                                <li><a class="dropdown-item" href="https://www.tiktok.com/@teleperformance/"><i class="fab fa-tiktok me-2"></i> TP TIKTOK</a></li>
+                                <li><a class="dropdown-item" href="https://www.youtube.com/@TeleperformanceGroup/"><i class="fab fa-youtube me-2"></i> TP YouTube</a></li>
+                                <li><a class="dropdown-item" href="https://www.tiktok.com/@teleperformance/"><i class="fab fa-tiktok me-2"></i> TP TikTok</a></li>
                                 <li><a class="dropdown-item" href="https://www.instagram.com/tp_malaysia/"><i class="fab fa-instagram me-2"></i> TPMY Instagram</a></li>
                                 <li><a class="dropdown-item" href="https://www.facebook.com/TPinMalaysia/"><i class="fab fa-facebook-f me-2"></i> TPMY Facebook</a></li>
                                 <li><a class="dropdown-item" href="https://www.instagram.com/tpinthailand/"><i class="fab fa-instagram me-2"></i> TPTH Instagram</a></li>
