--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-0">© <span id="current-year"></span> TP. All rights reserved.</p>
+                    <p class="mb-0">© <span id="current-year"></span> TP.COM All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <p class="mb-0">#MoreTogether</p>
