--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="careersDropdown">
                                 <li><a class="dropdown-item" href="#" id="hot-job" data-translate="hot_job">Hot Job 🔥</a></li>
-                                <li><a class="dropdown-item" href="oppor.html" data-translate="opportunities">Job Opportunities 🌟</a></li>
+                                <!--<li><a class="dropdown-item" href="oppor.html" data-translate="opportunities">Job Opportunities 🌟</a></li> -->
                                 <li><a class="dropdown-item" href="https://teleperformancemy.github.io/exRAF/" data-translate="refer_friend">Refer A Friend</a></li>
                             </ul>
                         </li>
