--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                             <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
                                 <li><a class="dropdown-item" href="https://www.teleperformance.com/en-us/locations/malaysia-site/malaysia/">TP Malaysia</a></li>
                                 <li><a class="dropdown-item" href="https://www.teleperformance.com/en-us/locations/thailand-site/thailand/">TP Thailand</a></li>
+                                <li><a class="dropdown-item" href="https://vtour.cloud/mh2n0j/ae5772z1/#TPMYVR/">TP VR</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -50,10 +51,10 @@
                                 Careers
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="careersDropdown">
-                                <li><a class="dropdown-item" href="https://linktr.ee/TPMY_IG" id="hot-job" data-translate="hot_job">Hot Job MALAYSIA🔥</a></li>
-                                <li><a class="dropdown-item" href="https://linktr.ee/TPTH_IG" id="hot-job" data-translate="hot_job">Hot Job THAILAND🔥</a></li>
-                                <!--<li><a class="dropdown-item" href="oppor.html" data-translate="opportunities">Job Opportunities 🌟</a></li> -->
-                                <li><a class="dropdown-item" href="https://teleperformancemy.github.io/exRAF/" data-translate="refer_friend">Refer A Friend</a></li>
+                                <li><a class="dropdown-item" href="https://linktr.ee/TPMY_IG" id="hot-job" data-translate="hot_job">Hot Job MALAYSIA 🔥</a></li>
+                                <li><a class="dropdown-item" href="https://linktr.ee/TPTH_IG" id="hot-job" data-translate="hot_job">Hot Job THAILAND 🔥</a></li>
+                                <li><a class="dropdown-item" href="https://teleperformancemy.github.io/exRAF/" data-translate="refer_friend">Refer A Friend 🌟</a></li>
+                                <!--<li><a class="dropdown-item" href="oppor.html" data-translate="opportunities">Job Opportunities </a></li> -->
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
