--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                                 Careers
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="careersDropdown">
-                                <li><a class="dropdown-item" href="https://linktr.ee/TPMY_IG" id="hot-job" data-translate="hot_job">Hot Job MALAYSIA 🔥</a></li>
-                                <li><a class="dropdown-item" href="https://linktr.ee/TPTH_IG" id="hot-job" data-translate="hot_job">Hot Job THAILAND 🔥</a></li>
+                                <li><a class="dropdown-item" href="https://linktr.ee/TPMY_IG" id="hot-job" data-translate="hot_jobMY">Hot Job MALAYSIA 🔥</a></li>
+                                <li><a class="dropdown-item" href="https://linktr.ee/TPTH_IG" id="hot-job" data-translate="hot_jobTH">Hot Job THAILAND 🔥</a></li>
                                 <li><a class="dropdown-item" href="https://teleperformancemy.github.io/exRAF/" data-translate="refer_friend">Refer A Friend 🌟</a></li>
                                 <!--<li><a class="dropdown-item" href="oppor.html" data-translate="opportunities">Job Opportunities </a></li> -->
                             </ul>
