--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <li><a class="dropdown-item" href="https://www.facebook.com/p/TPinThailand/"><i class="fab fa-facebook-f me-2"></i> TPTH Facebook</a></li>
                                 <li><a class="dropdown-item" href="https://www.linkedin.com/company/teleperformance/"><i class="fab fa-linkedin me-2"></i> TP LinkedIn</a></li>
                                 <li><a class="dropdown-item" href="https://www.youtube.com/@TeleperformanceGroup/"><i class="fab fa-youtube me-2"></i> TP YouTube</a></li>
-                                <li><a class="dropdown-item" href="https://www.tiktok.com/@teleperformance/"><i class="fab fa-tiktok me-2"></i> TP TikTok</a></li>
+                                <li><a class="dropdown-item" href="https://www.tiktok.com/@teleperformance_group/"><i class="fab fa-tiktok me-2"></i> TP TikTok</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
