--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link href="styles.css" rel="stylesheet">
     <!-- QRious Library -->
     <script src="https://cdn.jsdelivr.net/npm/qrious@latest/dist/qrious.min.js"></script>
+    <link rel="icon" href="TPLogo11.png" type="image/png">
 </head>
 
 <body>
