--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-expand-lg navbar-light py-3">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="TPLogo11.png.png" alt="Teleperformance Logo" height="40">
+                    <img src="TPLogo11.png" alt="Teleperformance Logo" height="40">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
