--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Teleperformance Careers - Find your perfect job opportunity with our global team">
-    <title>Teleperformance Careers</title>
+    <title>TP Careers</title>
+    <link rel="icon" href="TPLogo11.png" type="image/png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -21,7 +22,6 @@
     <link href="styles.css" rel="stylesheet">
     <!-- QRious Library -->
     <script src="https://cdn.jsdelivr.net/npm/qrious@latest/dist/qrious.min.js"></script>
-    <link rel="icon" href="TPLogo11.png" type="image/png">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-expand-lg navbar-light py-3">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="TPLogo11.png" alt="Teleperformance Logo" height="40">
+                    <img src="TPLogo11.png" alt="TP Logo" height="40">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
